refactor(factus): add ConfigurationProperties support for Factus integration